--- a/k8s/flask-devops-app/templates/deployment.yaml
+++ b/k8s/flask-devops-app/templates/deployment.yaml
@@ -35,9 +35,22 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
             - name: USER_LOGIN
-              value: "change_me"
+              valueFrom:
+                secretKeyRef:
+                  name: app-credentials
+                  key: username
             - name: USER_PASS
-              value: "change_me"
+              valueFrom:
+                secretKeyRef:
+                  name: app-credentials
+                  key: password
+          resources:
+            requests:
+              memory: "128Mi"
+              cpu: "250m"
+            limits:
+              memory: "256Mi"
+              cpu: "500m"
           ports:
             - name: http
               containerPort: 8000
@@ -50,8 +63,6 @@ spec:
             httpGet:
               path: /get_wallet
               port: http
-          resources:
-      {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
       {{- toYaml . | nindent 8 }}
