--- a/k8s/flask-devops-app/templates/deployment.yaml
+++ b/k8s/flask-devops-app/templates/deployment.yaml
@@ -27,12 +27,20 @@ spec:
       serviceAccountName: {{ include "flask-devops-app.serviceAccountName" . }}
       securityContext:
       {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      volumes:
+        - name: config-volume
+          configMap:
+            name: config-app
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
           {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          volumeMounts:
+            - name: config-volume
+              mountPath: /tmp/config.json
+              subPath: config.json
           env:
             - name: USER_LOGIN
               valueFrom:
