--- a/k8s/flask-devops-app/templates/statefulset.yaml
+++ b/k8s/flask-devops-app/templates/statefulset.yaml
@@ -38,6 +38,20 @@ spec:
       serviceAccountName: {{ include "flask-devops-app.serviceAccountName" . }}
       securityContext:
       {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      initContainers:
+        - name: install
+          image: busybox
+          command:
+            - wget
+            - "-O"
+            - "/inittest/index.html"
+            - http://info.cern.ch
+          volumeMounts:
+            - name: inittest
+              mountPath: "/inittest"
+      volumes:
+        - name: inittest
+          emptyDir: { }
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -47,6 +61,8 @@ spec:
           volumeMounts:
             - name: tmp
               mountPath: /tmp
+            - name: inittest
+              mountPath: /inittest
           env:
             - name: USER_LOGIN
               valueFrom:
@@ -87,5 +103,5 @@ spec:
       {{- end }}
       {{- with .Values.tolerations }}
       tolerations:
-      {{- toYaml . | nindent 8 }}
+  {{- toYaml . | nindent 8 }}
   {{- end }}
